added updated files after changing classification test size

--- a/notebooks/06_Pipeline_Logic.ipynb
+++ b/notebooks/06_Pipeline_Logic.ipynb
@@ -5,7 +5,17 @@
    "execution_count": 1,
    "id": "8ce5333e-a98e-40ad-9fbe-ddf25555ec7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
+      "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
+      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -45,7 +55,7 @@
       "Loading Detection Model: ../weights/yolov11l best model.pt...\n",
       "Detected YOLO architecture.\n",
       "Loading CLIP model: openai/clip-vit-base-patch32...\n",
-      "Loaded 3712 visual anchors from file.\n"
+      "Loaded 3105 visual anchors from file.\n"
      ]
     }
    ],
@@ -94,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing fdc15e0a-c687-45d7-a...: 100%|██████████| 211/211 [08:04<00:00,  2.30s/img]\n"
+      "Processing fdc15e0a-c687-45d7-a...: 100%|██████████| 211/211 [08:01<00:00,  2.28s/img]\n"
      ]
     },
     {
@@ -185,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
